re PR c++/26884 (Misleading diagnostic for invalid array initializer)

PR c++/26884
        * typeck2.c (digest_init): Raise error upon attempts to
        initialize arrays with variables.

From-SVN: r117855